flatpak: consider provided appstream ids when asserting resolution results

when an appstream id changes we may have 'foo' installed but get a
component with the new name 'bar'. this would previously fail the
assertion. now we take the provided ids also into account so that the
assertion passes as long as any provided id matches

BUG: 515150